# peptidelocator2

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run_imbalance_experiments.sh  slurm_bce.sh  slurm_esm2.sh  slurm_finetune.sh  slurm_interpret.sh  slurm_job.sh  slurm_prost_t5.sh  slurm_prot_t5.sh  slurm_save_model.sh
code/: esm2_size_experiment.py  evaluate.py  experiment.py  finetune_esm2.py  interpret_attention.py  interpret_umap.py  mlp_experiment.py  plot_results.py  prepare-data.py  prepare-partitions.py  prot_t5_experiment.py  save_mlp_weights.py
data/: swissprot-peptide.tsv
notebooks/: data_cleaning.ipynb  results-analysis.ipynb
peptidelocator/: __init__.py  cli.py  data.py  evaluate.py  inference.py  models.py  plot.py  train.py
processed-data/: peptide.tsv
reports/: 160426-data_preparation.html  160426-data_preparation.qmd
results/: partitioning-metadata.yml  peptides-1.yml  peptides-10.yml  peptides-11.yml  peptides-12.yml  peptides-13.yml  peptides-14.yml  peptides-15.yml  peptides-16.yml  peptides-17.yml  peptides-18.yml  peptides-19.yml  peptides-2.yml  peptides-20.yml  peptides-21.yml  peptides-22.yml  peptides-23.yml  peptides-24.yml  peptides-25.yml  peptides-26.yml  peptides-3.yml  peptides-4.yml  peptides-5.yml  peptides-6.yml  peptides-7.yml  peptides-8.yml  peptides-9.yml  results-peptides-predictor-1.csv  results-peptides-predictor-10.csv  results-peptides-predictor-11.csv  results-peptides-predictor-12.csv  results-peptides-predictor-13.csv  results-peptides-predictor-14.csv  (+85 more)
